force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__Country_Code__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Country_Code__c</fullName>
    <label>Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>