force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__Daylight_Savings_GMT_Offset__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Daylight_Savings_GMT_Offset__c</fullName>
    <label>Daylight Savings GMT Offset</label>
    <length>5</length>
    <type>Text</type>
</CustomField>