force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__Email2__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Email2__c</fullName>
    <externalId>true</externalId>
    <label>Email Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>