force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__Email_Address__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Email_Address__c</fullName>
    <label>XXXEmail Address</label>
    <type>Email</type>
</CustomField>