force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__Geographic_Location__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Geographic_Location__c</fullName>
    <label>Geographic Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>