force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__Info_Changed__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Info_Changed__c</fullName>
    <label>Info Changed</label>
    <type>DateTime</type>
</CustomField>