force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__IP_Signup__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__IP_Signup__c</fullName>
    <label>IP Signup</label>
    <length>30</length>
    <type>Text</type>
</CustomField>