force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Last_Sync_Date__c</fullName>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>