force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__Lists__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Lists__c</fullName>
    <label>Audiences</label>
    <type>TextArea</type>
</CustomField>