force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__MailChimp_ID__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__MailChimp_ID__c</fullName>
    <label>MailChimp ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>