force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__MC_List__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__MC_List__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>MC Audience</label>
    <referenceTo>MC4SF__MC_List__c</referenceTo>
    <relationshipLabel>MC Subscribers</relationshipLabel>
    <relationshipName>MC_Subscribers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>