force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__Member_Rating__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Member_Rating__c</fullName>
    <label>Member Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>