force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__Member_Rating_Image__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Member_Rating_Image__c</fullName>
    <formula>IMAGE(  CASE(MC4SF__Member_Rating__c,  1, &quot;/img/samples/stars_100.gif&quot;, 2, &quot;/img/samples/stars_200.gif&quot;, 3, &quot;/img/samples/stars_300.gif&quot;,  4, &quot;/img/samples/stars_400.gif&quot;,  5, &quot;/img/samples/stars_500.gif&quot;,  &quot;/img/samples/stars_000.gif&quot;),  &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Rating</label>
    <type>Text</type>
</CustomField>