force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__Merge10__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Merge10__c</fullName>
    <label>Merge10</label>
    <length>250</length>
    <type>Text</type>
</CustomField>