force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__MergeOverflow__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__MergeOverflow__c</fullName>
    <label>MergeOverflow</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>