force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__Parent_MC_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Parent_MC_Subscriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent MC Subscriber</label>
    <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
    <relationshipLabel>MC Subscribers</relationshipLabel>
    <relationshipName>MC_Subscribers</relationshipName>
    <type>Lookup</type>
</CustomField>