force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__Region__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Region__c</fullName>
    <label>Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>