force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__Status_Reason_Text__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Status_Reason_Text__c</fullName>
    <label>Status Reason Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>