force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Time_Zone__c</fullName>
    <label>Time Zone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>