force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__View_Subscriber_in_MC__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__View_Subscriber_in_MC__c</fullName>
    <formula>IF(ISBLANK(MC4SF__Web_ID__c), &quot;&quot;,
HYPERLINK(&quot;https://&quot; &amp;  $Setup.MC4SF__Global_Settings__c.MC4SF__Data_Center__c &amp; &quot;.admin.mailchimp.com/lists/members/view?id=&quot; &amp;  TEXT(MC4SF__Web_ID__c) , &quot;View Subscriber in MC&quot;)
)</formula>
    <label>View Subscriber in MC</label>
    <type>Text</type>
</CustomField>