force-app/main/default/objects/MC4SF__MC_Subscriber__c/fields/MC4SF__Web_ID__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Web_ID__c</fullName>
    <label>Web ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>