force-app/main/default/objects/MC4SF__MC_Subscriber__c/listViews/MC4SF__All.listView-meta.xml
<ListView>
    <fullName>MC4SF__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>